# my-comfyui

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config.py  main.py  server.py
src/api/: converter.py  server.py
src/cli/: cli.py
src/comfyui/: __init__.py  client.py
src/manager/: __init__.py  model.py  workflow.py
src/mcp/: __init__.py  schema.py  server.py
test/: inp.json  out.json
workflow/: 2frame.json  Nahida(NSFW).json  Qwen2509.json  SD1.5(NSFW).json  Upscale.json  Video-wan2-14B.json  ace1.5.4B.json  audioimg2video.json  clone.json  hunyuan3d.json  hunyuan_video.json  inpaint.json  realistic.json  watermark.json
workflow/api/: 2frame.json  Nahida(NSFW).json  Qwen2509.json  SD1.5(NSFW).json  Upscale.json  Video-wan2-14B.json  ace1.5.4B.json  audioimg2video.json  clone.json  hunyuan3d.json  hunyuan_video.json  inpaint.json  realistic.json  watermark.json
workflow/mcp/: Nahida(NSFW).yml
